--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,17 @@ h1 {
   margin-top: 50px;
 }
 
+h2 {
+  color: lightskyblue;
+  text-align: left;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+ul {
+  text-align: left;
+  color: blue;
+  font-family:'Courier New', Courier, monospace
+}
 
 footer {
   text-align: right;
@@ -20,6 +31,7 @@ footer {
 main {
   color: azure;
   text-align: center;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 img {
