modified css styling

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ ul {
   font-family:'Courier New', Courier, monospace
 }
 
+
+ol { 
+  text-align: left;
+  color:cadetblue;
+}
+
 footer {
   text-align: right;
 }
