--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   background: linear-gradient(to top right, #660033 0%, #003366 100%);
 }
 
-h1 {
+/* h1 {
   font-size: 3em;
   text-align: center;
   background-color: black;
@@ -48,4 +48,4 @@ main {
 img {
   margin-top: 125px;
   margin-bottom: 100px;
-}
+} */
